src/styles/style.css
/* Mobile */

body {
  background-color: #335c81;
  margin-top: 30%;
  font-size: 16px;
}

/* body {
  margin-top: 30%;
  font-size: 16px;
} */

nav {
  background-color: #244766;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
}

nav li {
  flex: row;
  display: inline-block;
  font-size: xx-large;
  margin: 0 9%;
}

nav a {
  color: #ffffff;
  text-align: center;
  text-decoration: none;
}

nav a:hover {
  background-color: #ffcc66;
  color: #244766;
  cursor: pointer;
}

div#introduction {
  background-color: #424242;
  margin: 20% auto 0;
  width: 90%;
}

img#intro-pic {
  margin-left: 5%;
  margin-top: 5%;
  width: 90%;
  border-radius: 7px;
}

span#greeting {
  font-size: larger;
}

p#bio {
  display: inline-block;
  color: #ffffff;
  font-size: large;
  max-width: 80%;
  text-align: left;
  padding-left: 5%;
}

span.contact {
  border: 2px solid black;
  color: #ffffff;
  display: block;
  font-size: large;
  width: 50%;
  margin-left: 5%;
}

span.sites {
  background-color: #424242;
  padding: 2%;
  border: 2px solid #335c81;
  border-radius: 7%;
}

a.sites {
  color: #ffcc66;
}

li.email {
  margin-bottom: 5%;
}

div#mySites {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  color: teal;
}

h1#tech-skills {
  display: block;
  margin-left: auto;
  margin-right: auto;
  color: #ffffff;
  font-size: xx-large;
  font-weight: 500;
  text-align: center;
}

section#skills {
  width: 100%;
  margin: 0;
}

img.tech {
  margin: 4% auto;
  padding: 2%;
  width: 70%;
  border: 1px solid black;
  background-color: rgb(250, 217, 187);
  display: block;
}

/* Projects */

h1#projects-intro {
  text-align: center;
  margin-top: 25%;
}

p.project-description {
  text-align: left;
}

@media screen and (min-width: 768px) {
  /* For Desktop */
  body {
    background-color: #335c81;
  }

  nav {
    background-color: #244766;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
  }

  nav li {
    flex: row;
    display: inline-block;
    font-size: xx-large;
    margin: 0 9%;
  }

  nav a {
    color: #ffffff;
    text-align: center;
    text-decoration: none;
  }

  nav a:hover {
    background-color: #ffcc66;
    color: #244766;
    cursor: pointer;
  }

  #introduction {
    background-color: #424242;
    width: 80%;
    margin: 8% auto;

    border-radius: 5px;
  }

  #intro-pic {
    margin-top: 15%;
    flex: row;
    margin-left: 5%;
    height: 300px;
    width: 300px;
    border-radius: 7px;
  }

  #bio {
    color: #ffffff;
    font-size: x-large;
    float: right;
    display: block;
    max-width: 60%;
    margin-top: 8%;
    margin-right: 7%;
  }

  .contact {
    color: #ffffff;
    padding: 3%;
    flex: row;
    display: inline-block;
    font-size: x-large;
  }

  .contact a {
    color: #ffffff;
    text-decoration: none;
  }

  .contact a:hover {
    color: #ffcc66;
  }

  h1 {
    margin: 0 auto;
  }

  .tech-used {
    color: #ffcc66;
  }

  .site-buttons {
    background-color: #424242;
    padding: 0.75%;
    border: 2px solid #335c81;
    border-radius: 7%;
  }
}

/* Tablets */
/* @media screen and (min-width: 481px) {
  body,
  p,
  a,
  h4 {
    font-size: 14px;
  }
} */

/* Laptops
@media screen and (min-width: 769px) {
  nav {
    background-color: #244766;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
  }

  nav li {
    flex: row;
    display: inline-block;
    font-size: xx-large;
    margin: 0 9%;
  }

  nav a {
    color: #ffffff;
    text-align: center;
    text-decoration: none;
  }

  nav a:hover {
    background-color: #ffcc66;
    color: #244766;
    cursor: pointer;
  }

  #introduction {
    background-color: #424242;
    width: 80%;
    margin: 8% auto;

    border-radius: 5px;
  }

  #intro-pic {
    margin-top: 15%;
    flex: row;
    margin-left: 5%;
    height: 300px;
    width: 300px;
    border-radius: 7px;
  }

  #bio {
    color: #ffffff;
    font-size: x-large;
    float: right;
    display: block;
    max-width: 60%;
    margin-top: 8%;
    margin-right: 7%;
  }

  .contact {
    color: #ffffff;
    padding: 3%;
    flex: row;
    display: inline-block;
    font-size: x-large;
  }

  .contact a {
    color: #ffffff;
    text-decoration: none;
  }

  .contact a:hover {
    color: #ffcc66;
  }

  #skills {
    margin-top: 4%;
    width: 85%;
    flex: row;
    flex-wrap: wrap;
    display: block;
    margin-left: 15%;
  }

  .tech {
    width: 15%;
    height: 200px;
    padding: 2%;
    margin-top: 2%;
    margin-left: 1%;
    border: 1px solid black;
    background-color: beige;
    position: relative;
    display: inline-block;
  }

  h1 {
    display: block;
    margin-left: auto;
    margin-right: auto;
    color: #ffffff;
    font-size: xx-large;
    text-align: center;
    font-weight: 500;
  }
}

/* Hamburger menu */
/* @media screen and (max-width: 481) {
} */

